# kuprup

./: README.md
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py
homework_03/doce/app/web-app/: pyproject.toml
homework_03/web-app/: main.py  pyproject.toml
homework_03/web-app/web_app/: app.py
homework_04/: jsonplaceholder_requests.py  models.py
